Melhorar o texto  contido na tag p (parágrafo)

--- a/Atividades/atividade-pratica-01/src/home.html
+++ b/Atividades/atividade-pratica-01/src/home.html
@@ -21,7 +21,7 @@
       <div>
         <h2><strong>Página Home</strong></h2>
         <br />
-        <p>Seja bem vindo ao sistema de banco de dados web.</p>
+        <p>Olá, Seja bem vindo(a) ao sistema de banco de dados web.</p>
 
       </div>
     </main>
