Adicionar infos do usuário na página de perfil

--- a/Atividades/atividade-pratica-01/src/perfil.html
+++ b/Atividades/atividade-pratica-01/src/perfil.html
@@ -21,6 +21,17 @@
       <div>
         <h2><strong>Página de Perfil</strong></h2>
         <br />
+        <img src="./img/lucas.jpg" alt="Imagem de perfil">
+        <br />
+        <span>Nome: Lucas Pereira Miranda</span>
+        <br />
+        <span>Usuário: lucaspmiranda</span>
+        <br />
+        <span>E-mail: lucas.miranda1@aluno.ufop.edu.br</span>
+        <br />
+        <span>Data de criação: 27/01/2021</span>
+        <br />
+        <span>Data do último acesso: 27/01/2021</span>
       </div>
     </main>
     <br />
