--- a/Atividades/atividade-pratica-01/src/perfil.html
+++ b/Atividades/atividade-pratica-01/src/perfil.html
@@ -7,7 +7,7 @@
     <header>
       <h1>Sistema de banco de dados web</h1>
       <nav>
-        <a href="home.html">Pessoas</a>
+        <a href="home.html">Home</a>
         <a href="pessoas.html">Pessoas</a>
         <a href="estados.html">Estados</a>
         <a href="cidades.html">Cidades</a>
