Renomear title da página de cadastros

--- a/Atividades/atividade-pratica-01/src/cadastro.html
+++ b/Atividades/atividade-pratica-01/src/cadastro.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8">
-    <title>Pessoas</title>
+    <title>Cadastro de Pessoas</title>
   </head>
   <body>
     <header>
