Adicionar css ao html

--- a/Atividades/exercicios/exercicio-02/introducao.html
+++ b/Atividades/exercicios/exercicio-02/introducao.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <style type="text/css">
+
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap');
+      html{
+        font-family: 'Roboto',Arial,sans-serif;
+        font-size: 18px;
+      }
       body{
         margin: 0;
       }
@@ -23,6 +29,48 @@
         border-style: solid;
         border-radius: 15px;
       }
+
+      a{
+        color:green;
+        background-color: blue;
+        text-decoration: none;
+        padding: 10px;
+      }
+
+      a:hover{
+        background-color: red;
+        font-weight: bold;
+      }
+
+      a:active{
+        background-color: green;
+        color:black;
+      }
+
+      a:link{
+        text-decoration: underline;
+        color:yellow;
+      }
+
+      a:visited{
+        background-color: #c6c6c6;
+      }
+
+      .flex{
+        display:flex;
+        flex-direction: column;
+        flex-flow: row wrap;
+        justify-content: center;
+      }
+
+      .flex div{
+        background-color: #0000ff;
+        width: 200px; 
+        margin: 20px;
+        line-height: 100px;
+        text-align: center;
+        border-radius: 20px;
+      }
       
     </style>
   </head>
@@ -39,7 +87,7 @@
 
     <!--Comentário-->
     <p style="color: red;">Parágrafo</p>
-    <div>
+    <div class="flex">
       <div>
         <a href="http://www.ufop.br" target="_blanck">Site da UFOP</a>
       </div>
