--- a/Atividades/atividade-pratica-01/src/perfil.html
+++ b/Atividades/atividade-pratica-01/src/perfil.html
@@ -3,21 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Perfil</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
       <h1>Sistema de banco de dados web</h1>
-      <nav>
-        <a href="home.html">Home</a>
-        <a href="pessoas.html">Pessoas</a>
-        <a href="estados.html">Estados</a>
-        <a href="cidades.html">Cidades</a>
-        <a href="produtos.html">Produtos</a>
-        <a href="perfil.html">Perfil</a>
-        <a href="sair.html">Sair</a>
+      <nav class="navbar">
+        <a class="nav-item" href="home.html">Home</a>
+        <a class="nav-item" href="pessoas.html">Pessoas</a>
+        <a class="nav-item" href="estados.html">Estados</a>
+        <a class="nav-item" href="cidades.html">Cidades</a>
+        <a class="nav-item" href="produtos.html">Produtos</a>
+        <a class="nav-item" href="perfil.html">Perfil</a>
+        <a class="nav-item" href="sair.html">Sair</a>
       </nav>
     </header>
-    <br />
     <main>
       <div>
         <h2><strong>Página de Perfil</strong></h2>
@@ -35,7 +37,6 @@
         <span>Data do último acesso: 27/01/2021</span>
       </div>
     </main>
-    <br />
     <footer>
       <div>2021.Todos os direitos reservados</div>
     </footer>
