--- a/Atividades/atividade-pratica-01/src/pessoas.html
+++ b/Atividades/atividade-pratica-01/src/pessoas.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <title>Pessoas</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
       <h1>Sistema de banco de dados web</h1>
-      <nav>
-        <a href="home.html">Home</a>
-        <a href="pessoas.html">Pessoas</a>
-        <a href="estados.html">Estados</a>
-        <a href="cidades.html">Cidades</a>
-        <a href="produtos.html">Produtos</a>
-        <a href="perfil.html">Perfil</a>
-        <a href="sair.html">Sair</a>
+      <nav class="navbar">
+        <a class="nav-item" href="home.html">Home</a>
+        <a class="nav-item" href="pessoas.html">Pessoas</a>
+        <a class="nav-item" href="estados.html">Estados</a>
+        <a class="nav-item" href="cidades.html">Cidades</a>
+        <a class="nav-item" href="produtos.html">Produtos</a>
+        <a class="nav-item" href="perfil.html">Perfil</a>
+        <a class="nav-item" href="sair.html">Sair</a>
       </nav>
     </header>
     <main>
@@ -33,8 +36,6 @@
         <a href="relatorio.html">Veja o relatório</a>
       </div>
     </section>
-    <br />
-    <br />
     <footer>
       <div>2021.Todos os direitos reservados</div>
     </footer>
