--- a/Atividades/atividade-pratica-01/src/pessoas.html
+++ b/Atividades/atividade-pratica-01/src/pessoas.html
@@ -6,6 +6,33 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <style>
+      section{
+        display:flex;
+        align-items: center;
+        justify-content: space-around;
+        padding-bottom: 2rem;
+        padding-top: 2rem;
+        border-top: 0.05rem solid #223691;
+        background-color: #ddd;
+      }
+      section div{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+
+      section div a{
+        color:#c91927;
+      }
+
+      section div a:hover{
+        color:#223691;
+        transition: ease 0.2s;
+      }
+
+    </style>
   </head>
   <body>
     <header>
