Alterações após estilizar o css dos forms e tables

--- a/Atividades/atividade-pratica-01/src/relatorio.html
+++ b/Atividades/atividade-pratica-01/src/relatorio.html
@@ -5,7 +5,10 @@
     <title>Pessoas</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/block/header.css">
+    <link rel="stylesheet" href="./css/block/main.css">
+    <link rel="stylesheet" href="./css/block/report.css">
+    <link rel="stylesheet" href="./css/block/footer.css">
   </head>
   <body>
     <header>
@@ -26,10 +29,7 @@
         <p>Veja as informações das pessoas no sistema web</p>
       </div>
     </main>
-    <section>
-      <div>
-        <h3>Relatório de Pessoas</h3>
-        
+    <section class="report">
         <table>
           <caption>Alunos da UFOP - ICEA</caption>
           <thead>
@@ -63,9 +63,29 @@
               <td>Rua Capitão Bernardo 136, Itabira</td>
               <td>110.154.289-73</td>
             </tr>
+            <tr>
+              <td>Lucas Pereira Miranda</td>
+              <td>lucaspmiranda</td>
+              <td>lucas.miranda1@aluno.ufop.edu.br</td>
+              <td>Rua Capitão Bernardo 134, Guanhães</td>
+              <td>110.154.289-74</td>
+            </tr>
+            <tr>
+              <td>Matias Carlos Miranda</td>
+              <td>matiascmiranda</td>
+              <td>matias.miranda2@aluno.ufop.edu.br</td>
+              <td>Rua Capitão Macedo 134, Sardoá</td>
+              <td>110.154.289-75</td>
+            </tr>
+            <tr>
+              <td>Joselino Marcelo Pereira</td>
+              <td>joselinompereira</td>
+              <td>joselino.pereira2@aluno.ufop.edu.br</td>
+              <td>Rua Capitão Bernardo 136, Itabira</td>
+              <td>110.154.289-73</td>
+            </tr>
           </tbody>
         </table>
-      </div>
     </section>
     <footer>
       <div>2021.Todos os direitos reservados</div>
