--- a/Atividades/atividade-pratica-01/src/cadastro.html
+++ b/Atividades/atividade-pratica-01/src/cadastro.html
@@ -5,7 +5,10 @@
     <title>Cadastro de Pessoas</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/block/header.css">
+    <link rel="stylesheet" href="./css/block/main.css">
+    <link rel="stylesheet" href="./css/block/form.css">
+    <link rel="stylesheet" href="./css/block/footer.css">
   </head>
   <body >
     <header>
@@ -26,38 +29,36 @@
         <p>Adicione as informações das pessoas no sistema web</p>
       </div>
     </main>
-    <section>
-      <div>
-        <h3>Cadastro de Pessoas</h3>
+    <section class="form-wrapper">
         <form method="POST" action="submit">
           <div>
-            <label for="name">Nome:</label>
+            <label for="name">Nome</label>
             <input type="text" name="name" id="name" placeholder="Adicione seu nome">
           </div>
           <div>
-            <label for="user">Usuário:</label>
+            <label for="user">Usuário</label>
             <input type="text" name="user" id="user" placeholder="Adicione seu usuário">
           </div>
           <div>
-            <label for="email">E-mail:</label>
+            <label for="email">E-mail</label>
             <input type="email" name="email" id="email" placeholder="Adicione seu e-mail">
           </div>
           <div>
-            <label for="adress">Endereço:</label>
+            <label for="adress">Endereço</label>
             <input type="text" name="adress" id="adress" placeholder="Digite seu endereço">
           </div>
           <div>
-            <label for="cpf">CPF:</label>
+            <label for="cpf">CPF</label>
             <input type="text" name="cpf" id="cpf" placeholder="Digite o seu CPF">
           </div>
           <div>
-            <label for="document-file">Anexe o seu documento</label>
+            <label for="document-file">Anexe foto</label>
             <input type="file" name="document-file" id="document-file">
           </div>
           <input type="submit" value="Cadastrar">
           <input type="reset" value="Limpar">
         </form>
-      </div>
+      
     </section>
     <br />
     <br />
