--- a/Atividades/atividade-pratica-01/src/perfil.html
+++ b/Atividades/atividade-pratica-01/src/perfil.html
@@ -5,7 +5,9 @@
     <title>Perfil</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/block/header.css">
+    <link rel="stylesheet" href="./css/block/main.css">
+    <link rel="stylesheet" href="./css/block/footer.css">
   </head>
   <body>
     <header>
