Adicionar css na página de perfil

--- a/Atividades/atividade-pratica-01/src/perfil.html
+++ b/Atividades/atividade-pratica-01/src/perfil.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/block/header.css">
     <link rel="stylesheet" href="./css/block/main.css">
+    <link rel="stylesheet" href="./css/block/perfil.css">
     <link rel="stylesheet" href="./css/block/footer.css">
   </head>
   <body>
@@ -25,20 +26,30 @@
     <main>
       <div>
         <h2><strong>Página de Perfil</strong></h2>
-        <br />
-        <img src="./img/lucas.jpg" alt="Imagem de perfil">
-        <br />
-        <span>Nome: Lucas Pereira Miranda</span>
-        <br />
-        <span>Usuário: lucaspmiranda</span>
-        <br />
-        <span>E-mail: lucas.miranda1@aluno.ufop.edu.br</span>
-        <br />
-        <span>Data de criação: 27/01/2021</span>
-        <br />
-        <span>Data do último acesso: 27/01/2021</span>
       </div>
     </main>
+    <section class="infos-section">
+        <div class="image-wrapper">
+          <img src="./img/lucas.jpg" alt="Imagem de perfil">
+        </div>
+        <div class="infos-wrapper">
+          <div>
+            <span><strong>Nome:</strong> Lucas Pereira Miranda</span>
+          </div>
+          <div>
+            <span><strong>Usuário:</strong> lucaspmiranda</span>
+          </div>
+          <div>
+            <span><strong>E-mail:</strong> lucas.miranda1@aluno.ufop.edu.br</span>
+          </div>
+          <div>
+            <span><strong>Data de criação:</strong> 27/01/2021</span>
+          </div>
+          <div>
+            <span><strong>Data do último acesso:</strong> 27/01/2021</span>
+          </div>
+        </div>
+    </section>
     <footer>
       <div>2021.Todos os direitos reservados</div>
     </footer>
