Colocar disabled no input

--- a/Atividades/exercicios/exercicio-04/calculo.html
+++ b/Atividades/exercicios/exercicio-04/calculo.html
@@ -17,8 +17,8 @@
       <input type="text" name="valor2" id="valor2" value="">
     
       <label for="resultado">Resultado</label>
-      <input type="text" name="resultado" id="resultado" value="">
-      <input type="button" value="Calcular" onclick="calcular()" disabled>
+      <input type="text" name="resultado" id="resultado" value="" disabled>
+      <input type="button" value="Calcular" onclick="calcular()">
     </form>
   </body>
 </html>
